fix spacing problems for IPC case study on work page

--- a/app/assets/stylesheets/case_study.css.sass
+++ b/app/assets/stylesheets/case_study.css.sass
@@ -42,7 +42,8 @@
   padding: 80px 0
   &:hover
     background-color: rgba(239,199,3,0.65)
-
+.case-study__buzzword
+  font-size: 50px
 
 .hero__header--brand1
   @extend %hero__header
@@ -61,7 +62,7 @@
 
 %hero--top
   @extend %hero
-  margin-top: -40px
+  margin-top: -42px
 
 %case-study--featured
   height: 450px
